--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/olx.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="A personal project built for learning purposes, inspired by online marketplaces. Not affiliated with OLX.">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
